--- a/test/RvtTestRunner.Test/RvtTestRunner.Test.csproj
+++ b/test/RvtTestRunner.Test/RvtTestRunner.Test.csproj
@@ -4,12 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9D680C27-E296-4024-9399-8EF8F2A9522D}</ProjectGuid>
+    <ProjectGuid>{4EC8BA52-FE06-4F88-80D9-9A54F0C64588}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RvtTestRunner</RootNamespace>
-    <AssemblyName>RvtTestRunner</AssemblyName>
+    <RootNamespace>RvtTestRunner.Test</RootNamespace>
+    <AssemblyName>RvtTestRunner.Test</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
+    <CodeAnalysisRuleSet>..\..\SharedCodeAnalysis.ruleset</CodeAnalysisRuleSet>
     <FileAlignment>512</FileAlignment>
     <ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>None</ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
     <Features>IOperation</Features>
@@ -27,9 +28,8 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <Prefer32Bit>false</Prefer32Bit>
-    <DocumentationFile>bin\2015\RvtAddin.xml</DocumentationFile>
+    <DocumentationFile>bin\2015\RvtTestRunner.Test.xml</DocumentationFile>
     <LangVersion>7.1</LangVersion>
-    <CodeAnalysisRuleSet>..\..\SharedCodeAnalysis.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == '2016|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
@@ -41,10 +41,9 @@
     <DebugType>full</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
-    <DocumentationFile>bin\2016\RvtAddin.xml</DocumentationFile>
+    <DocumentationFile>bin\2016\RvtTestRunner.Test.xml</DocumentationFile>
     <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
     <LangVersion>7.1</LangVersion>
-    <CodeAnalysisRuleSet>..\..\SharedCodeAnalysis.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == '2017|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
@@ -54,26 +53,24 @@
     <Optimize>false</Optimize>
     <FileAlignment>4096</FileAlignment>
     <DebugType>full</DebugType>
-    <PlatformTarget>x64</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
-    <DocumentationFile>bin\2017\RvtAddin.xml</DocumentationFile>
+    <DocumentationFile>bin\2017\RvtTestRunner.Test.xml</DocumentationFile>
     <RunCodeAnalysis>false</RunCodeAnalysis>
     <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
     <LangVersion>7.1</LangVersion>
-    <CodeAnalysisRuleSet>..\..\SharedCodeAnalysis.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == '2018|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\2018\</OutputPath>
     <DefineConstants>TRACE;DEBUG;RVT2018</DefineConstants>
     <BaseAddress>285212672</BaseAddress>
-    <DocumentationFile>bin\2018\RvtAddin.xml</DocumentationFile>
+    <DocumentationFile>bin\2018\RvtTestRunner.Test.xml</DocumentationFile>
     <FileAlignment>4096</FileAlignment>
     <DebugType>full</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <LangVersion>7.1</LangVersion>
-    <CodeAnalysisRuleSet>..\..\SharedCodeAnalysis.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == '2015-Release|AnyCPU'">
     <DebugSymbols>false</DebugSymbols>
@@ -85,10 +82,9 @@
     <DebugType>none</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
-    <DocumentationFile>bin-Release\2015\RvtAddin.xml</DocumentationFile>
+    <DocumentationFile>bin-Release\2015\RvtTestRunner.Test.xml</DocumentationFile>
     <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
     <LangVersion>7.1</LangVersion>
-    <CodeAnalysisRuleSet>..\..\SharedCodeAnalysis.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == '2016-Release|AnyCPU'">
     <DebugSymbols>false</DebugSymbols>
@@ -100,10 +96,9 @@
     <DebugType>none</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
-    <DocumentationFile>bin-Release\2016\RvtAddin.xml</DocumentationFile>
+    <DocumentationFile>bin-Release\2016\RvtTestRunner.Test.xml</DocumentationFile>
     <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
     <LangVersion>7.1</LangVersion>
-    <CodeAnalysisRuleSet>..\..\SharedCodeAnalysis.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == '2017-Release|AnyCPU'">
     <DebugSymbols>false</DebugSymbols>
@@ -115,173 +110,24 @@
     <DebugType>none</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
-    <DocumentationFile>bin-Release\2017\RvtAddin.xml</DocumentationFile>
+    <DocumentationFile>bin-Release\2017\RvtTestRunner.Test.xml</DocumentationFile>
     <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
     <LangVersion>7.1</LangVersion>
-    <CodeAnalysisRuleSet>..\..\SharedCodeAnalysis.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == '2018-Release|AnyCPU'">
     <OutputPath>bin\2018-Release\</OutputPath>
     <DefineConstants>RVT2018</DefineConstants>
     <BaseAddress>285212672</BaseAddress>
-    <DocumentationFile>bin-Release\2018\RvtAddin.xml</DocumentationFile>
+    <DocumentationFile>bin-Release\2018\RvtTestRunner.Test.xml</DocumentationFile>
     <FileAlignment>4096</FileAlignment>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <LangVersion>7.1</LangVersion>
-    <CodeAnalysisRuleSet>..\..\SharedCodeAnalysis.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == '2015|x64'">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x64\2015\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;RVT2015</DefineConstants>
-    <BaseAddress>285212672</BaseAddress>
-    <DocumentationFile>bin\2015\RvtAddin.xml</DocumentationFile>
-    <FileAlignment>4096</FileAlignment>
-    <DebugType>full</DebugType>
-    <PlatformTarget>x64</PlatformTarget>
-    <LangVersion>7.1</LangVersion>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>..\..\SharedCodeAnalysis.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == '2016|x64'">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x64\2016\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;RVT2016</DefineConstants>
-    <BaseAddress>285212672</BaseAddress>
-    <DocumentationFile>bin\2016\RvtAddin.xml</DocumentationFile>
-    <FileAlignment>4096</FileAlignment>
-    <DebugType>full</DebugType>
-    <PlatformTarget>x64</PlatformTarget>
-    <LangVersion>7.1</LangVersion>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>..\..\SharedCodeAnalysis.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == '2017|x64'">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x64\2017\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;RVT2017</DefineConstants>
-    <BaseAddress>285212672</BaseAddress>
-    <DocumentationFile>bin\2017\RvtAddin.xml</DocumentationFile>
-    <FileAlignment>4096</FileAlignment>
-    <DebugType>full</DebugType>
-    <PlatformTarget>x64</PlatformTarget>
-    <LangVersion>7.1</LangVersion>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>..\..\SharedCodeAnalysis.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == '2018|x64'">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x64\2018\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;RVT2018</DefineConstants>
-    <BaseAddress>285212672</BaseAddress>
-    <DocumentationFile>bin\2018\RvtAddin.xml</DocumentationFile>
-    <FileAlignment>4096</FileAlignment>
-    <DebugType>full</DebugType>
-    <PlatformTarget>x64</PlatformTarget>
-    <LangVersion>7.1</LangVersion>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>..\..\SharedCodeAnalysis.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == '2015-Release|x64'">
-    <OutputPath>bin\x64\2015-Release\</OutputPath>
-    <DefineConstants>RVT2015</DefineConstants>
-    <BaseAddress>285212672</BaseAddress>
-    <DocumentationFile>bin-Release\2015\RvtAddin.xml</DocumentationFile>
-    <FileAlignment>4096</FileAlignment>
-    <PlatformTarget>x64</PlatformTarget>
-    <LangVersion>7.1</LangVersion>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>..\..\SharedCodeAnalysis.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == '2016-Release|x64'">
-    <OutputPath>bin\x64\2016-Release\</OutputPath>
-    <DefineConstants>RVT2016</DefineConstants>
-    <BaseAddress>285212672</BaseAddress>
-    <DocumentationFile>bin-Release\2016\RvtAddin.xml</DocumentationFile>
-    <FileAlignment>4096</FileAlignment>
-    <PlatformTarget>x64</PlatformTarget>
-    <LangVersion>7.1</LangVersion>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>..\..\SharedCodeAnalysis.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == '2017-Release|x64'">
-    <OutputPath>bin\x64\2017-Release\</OutputPath>
-    <DefineConstants>RVT2017</DefineConstants>
-    <BaseAddress>285212672</BaseAddress>
-    <DocumentationFile>bin-Release\2017\RvtAddin.xml</DocumentationFile>
-    <FileAlignment>4096</FileAlignment>
-    <PlatformTarget>x64</PlatformTarget>
-    <LangVersion>7.1</LangVersion>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>..\..\SharedCodeAnalysis.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == '2018-Release|x64'">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x64\2018-Release\</OutputPath>
-    <DefineConstants>RVT2018</DefineConstants>
-    <BaseAddress>285212672</BaseAddress>
-    <DocumentationFile>bin-Release\2018\RvtAddin.xml</DocumentationFile>
-    <FileAlignment>4096</FileAlignment>
-    <DebugType>full</DebugType>
-    <PlatformTarget>x64</PlatformTarget>
-    <LangVersion>7.1</LangVersion>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>..\..\SharedCodeAnalysis.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xaml" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-    <Reference Include="WindowsBase" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="AlwaysAvailable.cs" />
-    <Compile Include="App.cs" />
-    <Compile Include="Runner\XunitExtensionMethods.cs" />
-    <Compile Include="Util\ExtensionMethods.cs" />
-    <Compile Include="RunnerCommand.cs" />
-    <Compile Include="Runner\AssemblyExtensions.cs" />
-    <Compile Include="Runner\AssemblyHelper.cs" />
-    <Compile Include="Runner\DependencyContextAssemblyCache.cs" />
-    <Compile Include="Runner\DependencyContextAssemblyHelper.cs" />
-    <Compile Include="Runner\DiagnosticMessageSink.cs" />
-    <Compile Include="Runner\DictionaryExtensions.cs" />
-    <Compile Include="Runner\DirectoryWrapper.cs" />
-    <Compile Include="Runner\FileSystemWrapper.cs" />
-    <Compile Include="Runner\FileWrapper.cs" />
-    <Compile Include="Runner\IDependencyContextReader.cs" />
-    <Compile Include="Runner\IDirectory.cs" />
-    <Compile Include="Runner\IFile.cs" />
-    <Compile Include="Runner\IFileSystem.cs" />
-    <Compile Include="Runner\LongLivedMarshalByRefObject.cs" />
-    <Compile Include="Runner\ParallelismOption.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Runner\ResolverUtils.cs" />
-    <Compile Include="Runner\RvtRunner.cs" />
-    <Compile Include="RvtRunnerLogger.cs" />
-    <Compile Include="RvtUnitTestAttribute.cs" />
-    <Compile Include="Runner\TestRunner.cs" />
-    <Compile Include="Runner\TestRunOptions.cs" />
-    <Compile Include="Runner\Transform.cs" />
-    <Compile Include="Runner\TransformFactory.cs" />
-    <Compile Include="Runner\XunitPackageCompilationAssemblyResolver.cs" />
-    <Compile Include="UI\TestRunnerControl.xaml.cs">
-      <DependentUpon>TestRunnerControl.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="UI\TestRunnerControlViewModel.cs" />
-    <Compile Include="UI\TestRunnerWindow.xaml.cs">
-      <DependentUpon>TestRunnerWindow.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Util\ExceptionUtil.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="RevitAPI" Condition=" '$(Configuration)' == '2015' ">
@@ -406,6 +252,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <AdditionalFiles Include="..\..\stylecop.json">
+      <Link>stylecop.json</Link>
+    </AdditionalFiles>
+    <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Autofac">
       <Version>4.6.2</Version>
     </PackageReference>
@@ -424,9 +276,6 @@
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers">
       <Version>2.3.0-beta1</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.DependencyModel">
-      <Version>2.0.0</Version>
-    </PackageReference>
     <PackageReference Include="MvvmLightLibsStd10">
       <Version>5.4.0.1-alpha</Version>
     </PackageReference>
@@ -434,9 +283,6 @@
       <Version>1.0.0</Version>
     </PackageReference>
     <PackageReference Include="reactiveui">
-      <Version>8.0.0-alpha0109</Version>
-    </PackageReference>
-    <PackageReference Include="reactiveui-wpf">
       <Version>8.0.0-alpha0109</Version>
     </PackageReference>
     <PackageReference Include="ResharperCodeContractNullability">
@@ -451,32 +297,7 @@
     <PackageReference Include="xunit">
       <Version>2.3.1</Version>
     </PackageReference>
-    <PackageReference Include="xunit.extensibility.core">
-      <Version>2.3.1</Version>
-    </PackageReference>
-    <PackageReference Include="xunit.runner.utility">
-      <Version>2.3.1</Version>
-    </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
-    <AdditionalFiles Include="..\..\stylecop.json">
-      <Link>stylecop.json</Link>
-    </AdditionalFiles>
-  </ItemGroup>
-  <ItemGroup>
-    <Page Include="UI\TestRunnerControl.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="UI\TestRunnerWindow.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PreBuildEvent>taskkill /f /fi "pid gt 0" /im "Revit.exe"
-exit 0</PreBuildEvent>
-  </PropertyGroup>
 </Project>
