--- a/src/RvtTestRunner/RvtTestRunner.csproj
+++ b/src/RvtTestRunner/RvtTestRunner.csproj
@@ -434,10 +434,10 @@
       <Version>1.0.0</Version>
     </PackageReference>
     <PackageReference Include="reactiveui">
-      <Version>8.0.0-alpha0109</Version>
+      <Version>8.0.0-alpha0110</Version>
     </PackageReference>
-    <PackageReference Include="reactiveui-wpf">
-      <Version>8.0.0-alpha0109</Version>
+    <PackageReference Include="ReactiveUI.WPF">
+      <Version>8.0.0-alpha0110</Version>
     </PackageReference>
     <PackageReference Include="ResharperCodeContractNullability">
       <Version>1.0.8</Version>
