--- a/.editorconfig
+++ b/.editorconfig
@@ -161,8 +161,8 @@ csharp_style_inlined_variable_declaration = true:warning
 csharp_style_pattern_matching_over_as_with_null_check = true:warning
 csharp_style_pattern_matching_over_is_with_cast_check = true:warning
 csharp_style_throw_expression = true:warning
-csharp_style_var_elsewhere = true:warning
-csharp_style_var_for_built_in_types = true:warning
+csharp_style_var_elsewhere = true:none
+csharp_style_var_for_built_in_types = true:none
 csharp_style_var_when_type_is_apparent = true:warning
 # New Line Options
 csharp_new_line_before_catch = true:warning
