--- a/.editorconfig
+++ b/.editorconfig
@@ -194,7 +194,7 @@ csharp_space_between_method_declaration_empty_parameter_list_parentheses = false
 csharp_space_between_method_call_name_and_opening_parenthesis = false:warning
 csharp_space_between_method_call_parameter_list_parentheses = false:warning
 csharp_space_between_method_call_empty_parameter_list_parentheses = false:warning
-csharp_space_between_parentheses = expressions:warning
+csharp_space_between_parentheses = false:warning
 csharp_space_between_square_brackets = false:warning
 # Wrapping Options
 csharp_preserve_single_line_blocks = true:warning
